--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "nextjs-fullstack-app-template",
+  "author": "Lakshmi Haritha Muktevi",
+  "description": "A tutorial and template for creating a production-ready fullstack Next.js application",
   "version": "0.1.0",
   "private": true,
+  "license" : "MIT",
+  "homepage": "https://github.com/HarithaML/nextjs-fullstack-app-template",
+  "engines": {
+    "node": ">=14.0.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
